change comment and add copyright to minfile

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "modulex-event-base",
+    "name": "kissy-event-base",
     "version": "1.0.3",
     "author": "yiminghe <yiminghe@gmail.com>",
     "engines": {
